; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_sysv_sem.c_mac_sysvsem_check_semctl.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_sysv_sem.c_mac_sysvsem_check_semctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.semid_kernel = type { i32 }

@sysvsem_check_semctl = common dso_local global i32 0, align 4
@mac_sysvsem_enforce = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_sysvsem_check_semctl(i32 %0, %struct.semid_kernel* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.semid_kernel*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.semid_kernel* %1, %struct.semid_kernel** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @sysvsem_check_semctl, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.semid_kernel*, %struct.semid_kernel** %5, align 8
  %11 = load %struct.semid_kernel*, %struct.semid_kernel** %5, align 8
  %12 = getelementptr inbounds %struct.semid_kernel, %struct.semid_kernel* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @MAC_CHECK(i32 %8, i32 %9, %struct.semid_kernel* %10, i32 %13, i32 %14)
  %16 = load i32, i32* %7, align 4
  ret i32 %16
}

declare dso_local i32 @MAC_CHECK(i32, i32, %struct.semid_kernel*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
